# Lemon-sin

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  01_HANDOFF.md  AGENTS.md  CLAUDE.md  CONTEXT.md  DATABASE_GUIDE.md  HOTKEYS.md  PLAN_REACT_MIGRATION.md  PROJECT_GUIDE.md  README.md  docker-compose.google-vision.yml  docker-compose.ocr-models.yml  docker-compose.yml  getting-started-with-claude-code.md  guide.html  package.json
03_lemon_healthcare/yeong-Vision-Nutrition/backend/: .env.example  pyproject.toml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/Food-backend/: README.md  pyproject.toml
backend/Food-backend/src/: __init__.py
backend/Nutrition-backend/: README.md
backend/Nutrition-backend/config/: kdca_healthinfo_topics.example.json
backend/Nutrition-backend/src/: config.py  main.py  readiness.py
backend/ai_agent_chat/tests/: test_action_agent.py  test_agent_memory_context.py  test_agent_tracing.py  test_answer_card_normalizer.py  test_answer_plan.py  test_app_intake.py  test_chat_agent_language.py  test_chat_turn.py  test_chatbot_agent.py  test_chatbot_renderers.py  test_langsmith_exporter.py  test_llm_completion.py  test_medical_knowledge_registry.py  test_medical_wiki_claim_adapter.py  test_medical_wiki_evidence_bundle_adapter.py  test_package_import.py  test_plan_renderers.py  test_polish_slots.py  test_safety_envelope.py  test_safety_guard.py  test_sglang_client.py  test_sglang_smoke.py  test_user_health_context.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 0001_add_social_login_columns.py  0001_create_users_table.py  0002_add_users_updated_at.py  0003_create_privacy_consent_audit_tables.py  0003_email_verifications.py  0005_create_learning_vector_tables.py  0006_create_regulated_ocr_intake_tables.py  0007_create_agent_memory_tables.py  0008_create_reminder_preferences.py  0008_health_daily_summaries_hypertable.py  0009_create_medical_source_governance_tables.py  0009_harden_learning_vector_supabase_access.py  0010_add_chatbot_unknown_backlog.py  0010_revoke_learning_api_grants_and_public_definers.py  0011_add_learning_review_metadata_snapshot.py  0011_seed_chatbot_reviewed_evidence.py  0012_configure_learning_private_storage_bucket.py  0012_seed_chatbot_policy_boundaries.py  0013_create_chatbot_unknown_backlog_summary_view.py  0013_index_user_supplement_foreign_keys.py  0014_create_backend_only_media_tables.py  0014_create_user_medications.py  0015_create_food_meal_tables.py  0015_create_food_records.py  0016_create_health_profile_metric_tables.py  0016_seed_lithium_supplement_boundary.py  0017_create_medical_record_status_tables.py  0017_extend_unknown_backlog_status_lifecycle.py  0018_create_learning_dataset_model_registry_tables.py  0018_seed_dyslipidemia_weight_evidence.py  0019_add_user_supplement_evidence_refs.py  0020_harden_supplement_user_tables_rls.py  0021_add_ingredient_daily_value_percent.py  0022_harden_audit_logs_and_default_privileges.py  0023a_create_lemon_app_request_role.py  0023b_create_rls_owner_policies.py  0023c_force_row_level_security.py  0024_add_user_supplement_precaution_snapshot.py  0025_create_supplement_food_taxonomy_tables.py  0026_add_annotation_task_learning_image_source.py  (+22 more)
backend/food_image_analysis/: README.md  app.py  app_exp16b_40cls_demo.py  app_nutrition_demo.py  food_filter.py
backend/food_image_analysis/classifier/: .gitignore  01_extract_embeddings.py  02_train_is_food.py  README.md  app.py  clip_features.py  predict.py
backend/food_image_analysis/detector/: DETECTOR_V5_DESIGN.md  DETECTOR_인계.md  README_LOCAL_SETUP.md  compare_demo.py  detector_demo.py  final_train.py  food_filter.py  jeongsik_eval.yaml  realapp_eval.yaml  v3_data.yaml
backend/food_image_analysis/dino_classifier/: README.md  app_pipeline_dino_demo.py  food_pipeline_dino.py
backend/food_image_analysis/food_classifier/: PR_NOTES.md  README.md  app.py  food_classifier.py  probe_head.pt  requirements.txt  train_probe.py
backend/food_image_analysis/tests/: __init__.py
backend/scripts/: __init__.py  a100_compact_status_check_fixed.ps1  a100_section_detector_300_noearly.ps1  a100_section_detector_300_noearly_direct.cmd  a100_section_detector_300_noearly_task.cmd  a100_section_detector_300_noearly_task.ps1  a100_section_detector_launch_cmdstart.ps1  a100_section_detector_queue_keeper.ps1  a100_section_detector_register_task.ps1  a100_section_detector_spawn_detached.py  a100_section_detector_status.ps1  a100_watch_early_stop_stdout_v2.ps1  agent_self_exam.py  apply_chronic_ingredient_review_decisions.py  apply_learning_manual_review_decision.py  apply_naver_tampermonkey_review_decisions.py  apply_naver_tampermonkey_review_pii_screening_decisions.py  apply_supplement_brand_batch_review_csv_decisions.py  apply_supplement_brand_products_auto_mapping_cleanup.py  apply_supplement_brand_review_decisions.py  apply_supplement_category_seed_cleanup.py  apply_supplement_review_pii_screening_decisions.py  ask_chatbot_agent.py  assign_paddleocr_benchmark_splits.py  audit_supplement_crawling_image_taxonomy.py  audit_supplement_taxonomy_persistence_contract.py  auto_seed_v3_with_llm.py  auto_seed_v3_with_vision.py  autofill_supplement_brand_review_csv.py  build_a100_paddleocr_mixed_hardcase_dataset.ps1  build_clova_ground_truth.py  build_clova_realphoto_rec_dataset.py  build_crawling_realphoto_rec_dataset.py  build_crawling_yolo_section_dataset.py  build_naver_tampermonkey_db_labeling_staging.py  build_naver_tampermonkey_ocr_manifest.py  build_naver_tampermonkey_review_pii_screening_manifest.py  build_ocr_ground_truth_review_queue.py  build_other_ingredients_candidate_manifest.py  build_paddleocr_finetune_run_plan.py  (+189 more)
backend/src/: README.md  __init__.py  config.py  main.py
backend/tests/: README.md  conftest.py
yeong-Vision-Nutrition/backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt
(+3711 files in other folders)
